# Lightwave-Ledstrip

./: .contextpackignore  .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  .worktreeinclude  AGENTS.md  ARCHITECTURE.md  AUDIO_BLOOM_IMPLEMENTATION.md  Audio_Pipeline_Refactor_Plan.md  BACKLOG.md  BEAT_TRACKER_DEBRIEF.md  CHANGELOG.md  CICD_FILE_TREE.txt  CICD_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  CONSTRAINTS.md  CONTRIBUTING.md  CRITICAL_LED_FIX.md  DEVELOPMENT_PIPELINE_AUDIT.md  ESP32_P4_MIGRATION.md  FEATURE_BRANCH_DOCUMENTATION.md  FFT_DELIVERABLES.md  FFT_FEATURE_C_COMPLETION.md  FFT_INDEX.md  FFT_TEST_MATRIX.md  FFT_WEBSOCKET_IMPLEMENTATION.md  FFT_WEBSOCKET_README.md  FFT_WEBSOCKET_USAGE_GUIDE.md  FIGMA_SWIFTUI_RESEARCH.md  FOLDER_MAP.md  GOV-research-pipeline.md  K1_Prototype_Wiring_Schematic.html  LVGL_9_CODE_REFERENCE.h  LVGL_9_DASHBOARD_RESEARCH.md  LVGL_9_RESEARCH_INDEX.md  LVGL_9_RESEARCH_SUMMARY.md  LVGL_9_TAB5_ENCODER_PATTERNS.md  NOTICE  PARTITION_OPTIMIZATION.md  (+49 more)
.claude/: settings.json
.github/: PHASE_11_SUMMARY.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.planning/: EXECUTION_PLAN.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
AP_SOT/: AUDIO_PIPELINE_ARCHITECTURE.md  CAPTAIN_HANDOVER_DOCUMENT.md  CAPTAIN_HANDOVER_DOCUMENT_V2.md  NORMALIZATION_FIX_SUMMARY.md  PIPELINE_MIGRATION_GUIDE.md  SPECTRASYNQ_MUSIC_TEST_PROTOCOL.md  test_zone_debug
Blender/: CLAUDE.md
CANON_PACK_BRIEFING_BUNDLE/: 00_CONSTITUTION.md  01_DECISION_REGISTER.md  02_AS_IS_ARCHITECTURE_ATLAS.md  03_GLOSSARY_ALIAS_MAP.md  04_OPEN_QUESTIONS.md  05_ARCHITECTURE_SPEC.md  05_TO_BE_ARCHITECTURE_SPEC.md  06_INTERFACE_CONTRACTS.md  07_MIGRATION_PLAN.md  08_SYSTEM_OF_SYSTEMS_ARCHITECTURE.md  09_FOUNDING_ARCHITECT_DELIVERABLE.md  10_PRISM_STUDIO_AUTHORING_EXPERIENCE.md  CLAUDE.md  PRISM_STUDIO_CREATIVE_COCKPIT_v0.1.html  Prism_Data_Model_2B_1.md  Prism_Semantics_2A_2.md  Prism_ShowBundle_2C.md  Prism_Stems_2B_2.md  Prism_Studio_2A_1.md
GENESIS-ARCHITECTURE/: INTEGRATION_GUIDE.md
LightwaveOS-P4/: EMBEDDER.md  build_with_idf55.sh  clean_idf6.sh  flash_and_monitor.sh  idf_version_pin.sh  verify_build.sh
LightwaveOS-Production/: PRODUCTION_BUILD_SUMMARY.md  README.md  partitions_16MB_no_ota.csv  platformio.ini
Trinity_v0.2/: CLAUDE.md
assets/source_refactor_final_archive/: CMakeLists.txt  Emotiscope.c  cpu_core.h  gpu_core.h  spectra_audio_interface.c  spectra_audio_interface.h  spectra_color_palette.c  spectra_color_palette.h  spectra_config_manager.c  spectra_config_manager.h  spectra_post_processing.c  spectra_symmetry_engine.c  spectra_symmetry_engine.h  spectra_visual_algorithm.c  spectra_visual_input.c  spectra_visual_input.h  spectra_zone_painter.c  spectra_zone_painter.h  wireless.h
canon/: CLAUDE.md
collected-context/: COLLECTION_FINDINGS.md  README.md  git-history.json  project-artifacts.json
contextpack/: cache_fingerprint.json  cache_notes.md  diff_part_01.patch  diff_part_02.patch  diff_part_03.patch  pack_stats.json  packet.md  prompt.md
data/: CLAUDE.md  ENHANCED_FEATURES.md  WebServerAudioSynq.cpp  app-v3.js  app.js  index-v3.html  index.html  script.js  styles.css
docs/: ADVANCED_FEATURES_IMPLEMENTATION_GUIDE.md  AGENT_OPERATIONAL_PROTOCOL_AUDIT.md  AGENT_PROTOCOL_IMPLEMENTATION_SUMMARY.md  AGENT_WORKFLOW_ARCHITECTURE.md  API_AUTH_DEPRECATION_DEBRIEF.md  ARCHITECTURE.md  AUDIO_VISUAL_QUICK_REFERENCE.md  BRANCH_GOAL_VERIFICATION.md  CAPTURE_PIPELINE_REFERENCE.md  CAPTURE_TEST_SUITES.md  CC_AGENT_TOOLCHAIN_COMPLETION.md  CC_HANDOFF_REMAINING_TASKS.md  COMMIT_CONTEXT_2026-03-12.md  DASHBOARD_V3_INTEGRATION_PLAN.md  DEPENDENCY_LICENSES.md  DUAL_STRIP_WAVE_ENGINE_IMPLEMENTATION.md  FASTLED_IMPLEMENTATION_PLAN.md  HANDOVER_OTA_PHASE_COMPLETE.md  HANDOVER_PROMPT_NEXT_AGENT.md  HEAP_TRACE_ANALYSIS.md  HUNT-WAVE1-spec-changes.md  IMPLEMENTATION_BACKLOG_AND_ACTIONS.md  IMPLEMENTATION_CHECKLIST_AND_NEXT_STEPS.md  INDEX.md  K1_ECOSYSTEM_API_ROADMAP.md  K1_Waveform_Algorithm_Breakdown.md  LIGHTSHOW_MOTION_MECHANICS.MD  LIGHT_GUIDE_PLATE.md  LIGHT_SHOW_MECHANICS_COMPREHENSIVE.md  LLM_CONTEXT.md  LightwaveOS-Dashboard-V3-Complete.html  LightwaveOS_Dashboard_v4.html  M5Module-HMI-Analysis.md  (+25 more)
firmware-v3/testbed/: README.md  REFERENCE_GENERATION.md  SETUP_SUMMARY.md  __init__.py  pyproject.toml
firmware-v3/testbed/calibration/: __init__.py  bridge.py  metrics.py
firmware-v3/testbed/core/: QUICKSTART.md  README_TRANSPORT_CORE.md  __init__.py  context.py  render_utils.py  transport_core.py
firmware-v3/testbed/data/: example_pytorch_usage.py  read_reference.py
firmware-v3/testbed/evaluation/: __init__.py  capture_cli.py  frame_parser.py  l1_temporal.py  l2_audiovisual.py  l3_perceptual.py  pipeline.py
firmware-v3/testbed/scripts/: generate_training_data.py  run_calibration.py
firmware-v3/testbed/tests/: __init__.py  test_calibration.py  test_context.py  test_evaluation.py  test_render_utils.py  test_transport_core.py
firmware-v3/testbed/training/: __init__.py  data_generator.py  dataset.py
firmware-v3/tools/benchmark/: pyproject.toml  setup.py
firmware-v3/tools/benchmark/lwos_benchmark/: cli.py
firmware-v3/tools/benchmark/lwos_benchmark/analysis/: __init__.py  statistics.py
firmware-v3/tools/benchmark/lwos_benchmark/storage/: __init__.py
firmware-v3/tools/benchmark/lwos_benchmark/visualization/: __init__.py
tab5-encoder/simulator/: CMakeLists.txt  README.md  main_sim.cpp
tab5-encoder/simulator/m5gfx_mock/: M5GFX_Mock.h
tools/lwos-test-audio/: .gitignore  ARCHITECTURE.md  DITHERING_TEST_SUITE_README.md  PACKAGE_OVERVIEW.md  QUICKSTART.md  README.md  capture_frames.py  dithering_analysis.ipynb  dithering_test_suite.py  pyproject.toml  test_analyzers_standalone.py
tools/lwos-test-audio/examples/: basic_usage.py
tools/lwos-test-audio/lwos_test_audio/: __init__.py  analyzer.py  cli.py  collector.py  models.py  report.py
tools/lwos-test-audio/lwos_test_audio/analyzers/: README.md  __init__.py  latency_analyzer.py  motion_analyzer.py  smoothness_analyzer.py
tools/lwos-test-audio/tests/: __init__.py  test_models.py
(+4910 files in other folders)
