[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lwos-test-audio"
version = "0.1.0"
description = "Audio effect validation and testing framework for LightwaveOS"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "LightwaveOS Contributors"}
]
dependencies = [
    "websockets>=12.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "sqlite-utils>=3.36",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
lwos-test = "lwos_test_audio.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["lwos_test_audio"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
